# fts-rs

./: .travis.yml  Cargo.toml  Makefile  README.md  search-index.js
.github/workflows/: regression.yml
benches/: fts.rs
fts/: index.html  sidebar-items.js
fts/ffi/: constant.FTS_AGAIN.html  constant.FTS_COMFOLLOW.html  constant.FTS_D.html  constant.FTS_DC.html  constant.FTS_DEFAULT.html  constant.FTS_DNR.html  constant.FTS_DONTCHDIR.html  constant.FTS_DOT.html  constant.FTS_DP.html  constant.FTS_ERR.html  constant.FTS_F.html  constant.FTS_FOLLOW.html  constant.FTS_INIT.html  constant.FTS_LOGICAL.html  constant.FTS_NAMEONLY.html  constant.FTS_NOCHDIR.html  constant.FTS_NOINSTR.html  constant.FTS_NOSTAT.html  constant.FTS_NS.html  constant.FTS_NSOK.html  constant.FTS_OPTIONMASK.html  constant.FTS_PHYSICAL.html  constant.FTS_ROOTLEVEL.html  constant.FTS_ROOTPARENTLEVEL.html  constant.FTS_SEEDOT.html  constant.FTS_SKIP.html  constant.FTS_SL.html  constant.FTS_SLNONE.html  constant.FTS_STOP.html  constant.FTS_SYMFOLLOW.html  constant.FTS_W.html  constant.FTS_WHITEOUT.html  constant.FTS_XDEV.html  enum.FTS.html  fn.fts_children.html  fn.fts_close.html  fn.fts_open.html  fn.fts_read.html  fn.fts_set.html  index.html  (+2 more)
fts/fts/: enum.FtsError.html  enum.FtsInfo.html  enum.FtsSetOption.html  index.html  sidebar-items.js  struct.Fts.html  struct.FtsComp.html  struct.FtsEntry.html  type.FtsCompFunc.html  type.FtsCompIn.html
fts/fts/fts_option/: constant.COMFOLLOW.html  constant.LOGICAL.html  constant.NOCHDIR.html  constant.NOSTAT.html  constant.PHYSICAL.html  constant.SEEDOT.html  constant.XDEV.html  index.html  sidebar-items.js  struct.Flags.html
fts/walkdir/: index.html  sidebar-items.js  struct.DirEntry.html  struct.FileType.html  struct.Iter.html  struct.WalkDir.html  struct.WalkDirConf.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/: trait.FromIterator.js  trait.IntoIterator.js  trait.Iterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.BitAnd.js  trait.BitOr.js  trait.BitXor.js  trait.Drop.js  trait.Not.js  trait.Sub.js
implementors/num/traits/: trait.FromPrimitive.js
src/: ffi.rs  fts.rs  fts_ext.rs  lib.rs  walkdir.rs
src/fts/: ffi.rs.html  fts.rs.html  lib.rs.html  walkdir.rs.html
src/fts/src/: ffi.rs.html  fts.rs.html  lib.rs.html  walkdir.rs.html
