[package]
name = "fts"
version = "0.1.4"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/fts-rs"
license = "MIT"
readme = "README.md"
description = "A Rust library for high performance directory walking using libc fts"
documentation = "http://dalance.github.io/fts-rs/fts"
keywords = ["libc", "directory", "walk", "recursive", "iterator"]
exclude = ["test/*"]

[dependencies]
bitflags       = "0.5.0"
enum_primitive = "0.1.0"
libc           = "0.2.8"
num            = "0.1.31"

[dev-dependencies]
walkdir        = "0.1.5"
